--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+/ui/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -13,8 +13,9 @@
 # testing
 /coverage
 
+
 # next.js
-/.next/
+/ui/.next/
 /out/
 
 # production
