--- a/nikto/Dockerfile
+++ b/nikto/Dockerfile
@@ -1,6 +1,5 @@
 FROM python:3.11-slim
 
-# Instala dependências básicas para Nikto e seu código Python
 RUN apt-get update && apt-get install -y --no-install-recommends \
     openjdk-17-jre-headless \
     wget curl git perl \
@@ -8,10 +7,17 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     openssl ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
-# Instala Nikto
 RUN git clone https://github.com/sullo/nikto.git /opt/nikto && \
     ln -s /opt/nikto/program/nikto.pl /usr/local/bin/nikto && chmod +x /opt/nikto/program/nikto.pl
 
+RUN pip install flask flask-cors
+
 RUN mkdir -p /app/relatorios && chmod 777 /app/relatorios
 
+WORKDIR /app
+
+COPY app.py .
+
 EXPOSE 5000
+
+CMD ["python", "app.py"]
