--- a/nikto/Dockerfile
+++ b/nikto/Dockerfile
@@ -1,23 +1,52 @@
+# ./nikto/Dockerfile
 FROM python:3.11-slim
 
-RUN apt-get update && apt-get install -y --no-install-recommends \
-    openjdk-17-jre-headless \
-    wget curl git perl \
-    libnet-ssleay-perl libio-socket-ssl-perl \
-    openssl ca-certificates \
+# Install system dependencies
+RUN apt-get update && apt-get install -y \
+    perl \
+    libnet-ssleay-perl \
+    openssl \
+    libauthen-pam-perl \
+    libio-pty-perl \
+    apt-utils \
+    unzip \
+    wget \
+    curl \
+    git \
     && rm -rf /var/lib/apt/lists/*
 
-RUN git clone https://github.com/sullo/nikto.git /opt/nikto && \
-    ln -s /opt/nikto/program/nikto.pl /usr/local/bin/nikto && chmod +x /opt/nikto/program/nikto.pl
-
-RUN pip install flask flask-cors
-
-RUN mkdir -p /app/relatorios && chmod 777 /app/relatorios
-
+# Create app directory
 WORKDIR /app
 
-COPY app.py .
+# Download and install Nikto
+RUN wget https://github.com/sullo/nikto/archive/master.zip \
+    && unzip master.zip \
+    && mv nikto-master nikto \
+    && rm master.zip \
+    && chmod +x /app/nikto/program/nikto.pl
 
+# Create symbolic link for easy access
+RUN ln -s /app/nikto/program/nikto.pl /usr/local/bin/nikto
+
+# Install Flask for API
+RUN pip install flask flask-cors requests
+
+# Create reports directory
+RUN mkdir -p /app/relatorios
+
+# Copy Python API server
+COPY nikto_server.py /app/
+COPY requirements.txt /app/
+
+# Install Python dependencies
+RUN pip install -r requirements.txt
+
+# Expose port
 EXPOSE 5000
 
-CMD ["python", "app.py"]
+# Health check
+HEALTHCHECK --interval=30s --timeout=10s --start-period=5s --retries=3 \
+    CMD curl -f http://localhost:5000/health || exit 1
+
+# Start the Flask server
+CMD ["python", "nikto_server.py"]
